--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.1.4"
   },
